@@ -4,6 +4,9 @@ Changelog
 1.0b15 - unreleased
 -------------------
 
+* beforepost and afterpost callback options weren't working. fixed.
+  [smcmahon]
+
 * Recover when jQuery tries to throw away error responses in ajax loads.
   [smcmahon]
 
